feat: Reorganizar estrutura de arquivos e implementar novo sistema de cadastro e gerenciamento de medicamentos no estoque

--- a/style/farmacia/private/estoque/cadastromedicamentos.css
+++ b/style/farmacia/private/estoque/cadastromedicamentos.css
@@ -1,6 +1,6 @@
-@import url("../../usuario/geral.css");
-@import url("../../usuario/footer.css");
-@import url("../../usuario/nav.css");
+@import url("/style/usuario/geral.css");
+@import url("/style/usuario/footer.css");
+@import url("/style/usuario/nav.css");
 
 .caixa {
   background: #fff;
